@@ -18,6 +18,16 @@ android {
         versionName = "1.0"
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += mapOf(
+                    "room.schemaLocation" to "$projectDir/schemas",
+                    "room.incremental" to "true",
+                    "room.expandProjection" to "true"
+                )
+            }
+        }
     }
 
     buildTypes {
@@ -29,35 +39,19 @@ android {
             )
         }
     }
+
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
-    }
-    kotlinOptions {
-        jvmTarget = "17"
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
 
-    kotlin {
-        jvmToolchain(17)
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 
     buildFeatures {
         viewBinding = true
         buildConfig = true
-    }
-    kapt {
-        correctErrorTypes = true
-        javacOptions {
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED")
-        }
     }
 }
 
@@ -70,35 +64,41 @@ dependencies {
     implementation(libs.androidx.constraintlayout)
 
     // Navigation
-    implementation("androidx.navigation:navigation-fragment-ktx:2.7.2")
-    implementation("androidx.navigation:navigation-ui-ktx:2.7.2")
+    implementation("androidx.navigation:navigation-fragment-ktx:2.7.5")
+    implementation("androidx.navigation:navigation-ui-ktx:2.7.5")
 
     // Glide
-    implementation("com.github.bumptech.glide:glide:4.15.1")
-    kapt("com.github.bumptech.glide:compiler:4.15.1")
+    implementation("com.github.bumptech.glide:glide:4.16.0")
+    kapt("com.github.bumptech.glide:compiler:4.16.0")
 
     // Retrofit
     implementation("com.squareup.retrofit2:retrofit:2.9.0")
     implementation("com.squareup.retrofit2:converter-gson:2.9.0")
-    implementation("com.squareup.okhttp3:logging-interceptor:4.11.0")
+    implementation("com.squareup.okhttp3:logging-interceptor:4.12.0")
 
     // Hilt
     implementation("com.google.dagger:hilt-android:2.48")
     kapt("com.google.dagger:hilt-compiler:2.48")
 
+    // Room
+    val room_version = "2.6.0"
+    implementation("androidx.room:room-runtime:$room_version")
+    kapt("androidx.room:room-compiler:$room_version")
+    implementation("androidx.room:room-ktx:$room_version")
+
     // Splashscreen
     implementation("androidx.core:core-splashscreen:1.0.1")
 
-    // Material Design (только одна версия!)
-    implementation("com.google.android.material:material:1.9.0")
+    // SwipeRefreshLayout
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+
+    // Gson
+    implementation("com.google.code.gson:gson:2.10.1")
 
     // Тестирование
     testImplementation(libs.junit)
     androidTestImplementation(libs.androidx.junit)
     androidTestImplementation(libs.androidx.espresso.core)
-
-    // SwipeRefreshLayout
-    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
 }
 
 kapt {
